[project]
name = "arxiv-droprep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "monai>=1.5.2",
    "nibabel>=5.4.2",
    "numpy>=2.2.6",
    "ruff>=0.15.8",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]
